# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  23 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Sync our MAKEDEV with Debian's latest version. 

  19 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    dhcpcd now reports the correct needed version

    iwconfig and wpa_supplicant have better tests for wireless interface
    which fixes the "lan wlan" problem

* baselayout-1.12.0_pre6 (18 Aug 2005)

  18 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    RC_AUTO_INTERFACE defaults to NO - but we still default to DHCP
    
    consoletype is now cached. This has the benefit of being very slightly
    faster and you now get coloured text for parallel startup
    
    Parallel startup also does parallel shutdown as well
    
    You're now warned if you're using a deprecated conf.d/net syntax
    
  18 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Add a note about the 6th field for root filesystems #95846.

  16 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    rquotad is supposed to be an alias for port 4003 not 4002.

  15 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Add ocfs2 to the NET_FS_LIST #102659 by Lazar Obradovic.

  15 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    iproute2 now understands the old iface_xxx syntax, but this only works
    if ifconfig (from net-tools) is installed

  14 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    fallback_route_eth0 now works again

    Implemented interactive startup - fixes #5353
    Thanks to Paul Pacheco for the patch

  13 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Parallel startup races should now be fixed

    iwconfig now scans for mode so you can prefer ad-hoc networks

  12 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    RC_AUTO_INTERFACE now defaults to no - we no longer mess with /etc unless
    told too

    tuntap no longer complains about ${devnull}
