@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
 
+  24 Aug 2005; Roy Marples <uberlord@gentoo.org>:
+
+    rc-daemon now handles --signal correct - fixes #103182
+
   23 Aug 2005; Mike Frysinger <vapier@gentoo.org>:
 
     Sync our MAKEDEV with Debian's latest version. 
